[gd_scene load_steps=8 format=3 uid="uid://cmtfliwxho6h3"]

[ext_resource type="Texture2D" uid="uid://2gce4meq0oy6" path="res://assets/test_sprites/room_test.webp" id="1_jyhfs"]
[ext_resource type="PackedScene" uid="uid://bphmcqkdqkh7k" path="res://scenes/Player.tscn" id="1_player"]
[ext_resource type="PackedScene" uid="uid://d1e8j4xvn7m2p" path="res://scenes/Enemy.tscn" id="2_enemy"]
[ext_resource type="Script" uid="uid://bw82gn2gctyxi" path="res://Scripts/GameManager.gd" id="3_game_manager"]

[sub_resource type="Resource" id="Resource_jyhfs"]
metadata/__load_path__ = "res://resources/BaseEnemy.tres"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(638, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(20, 412)

[node name="Main" type="Node2D"]

[node name="RoomTest2" type="Sprite2D" parent="."]
position = Vector2(-1.00003, -7.50002)
scale = Vector2(1.1, 1)
texture = ExtResource("1_jyhfs")

[node name="GameLayer" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="GameLayer"]

[node name="Player" parent="GameLayer" instance=ExtResource("1_player")]
position = Vector2(0, 150)

[node name="Enemy" parent="GameLayer" instance=ExtResource("2_enemy")]
position = Vector2(0, -150)
enemy_data = SubResource("Resource_jyhfs")

[node name="LevelBounds" type="StaticBody2D" parent="GameLayer"]

[node name="TopWall" type="CollisionShape2D" parent="GameLayer/LevelBounds"]
position = Vector2(0, -206)
shape = SubResource("RectangleShape2D_2")

[node name="BottomWall" type="CollisionShape2D" parent="GameLayer/LevelBounds"]
position = Vector2(0, 206)
shape = SubResource("RectangleShape2D_2")

[node name="LeftWall" type="CollisionShape2D" parent="GameLayer/LevelBounds"]
position = Vector2(-319, 0)
shape = SubResource("RectangleShape2D_1")

[node name="RightWall" type="CollisionShape2D" parent="GameLayer/LevelBounds"]
position = Vector2(319, 0)
shape = SubResource("RectangleShape2D_1")

[node name="Obstacles" type="Node2D" parent="GameLayer"]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HealthUI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StanceIndicator" type="Label" parent="UILayer/HealthUI"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
text = "ROCK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHearts" type="HBoxContainer" parent="UILayer/HealthUI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0

[node name="PlayerDefensePoints" type="HBoxContainer" parent="UILayer/HealthUI"]
layout_mode = 0
offset_left = 20.0
offset_top = 55.0
offset_right = 120.0
offset_bottom = 75.0

[node name="DefenseLabel" type="Label" parent="UILayer/HealthUI/PlayerDefensePoints"]
layout_mode = 2
text = "DEF:"
vertical_alignment = 1

[node name="DefensePoint1" type="Label" parent="UILayer/HealthUI/PlayerDefensePoints"]
layout_mode = 2
text = "üõ°Ô∏è"
vertical_alignment = 1

[node name="DefensePoint2" type="Label" parent="UILayer/HealthUI/PlayerDefensePoints"]
layout_mode = 2
text = "üõ°Ô∏è"
vertical_alignment = 1

[node name="DefensePoint3" type="Label" parent="UILayer/HealthUI/PlayerDefensePoints"]
layout_mode = 2
text = "üõ°Ô∏è"
vertical_alignment = 1

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_game_manager")
